--- a/org_new/src/main/AndroidManifest.xml
+++ b/org_new/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -51,6 +51,9 @@
         <activity android:name=".ui.activity.DiagnozShowActivity"/>
         <activity android:name=".ui.activity.ListSubVidchuttiaActivity"/>
         <activity android:name=".ui.activity.DetailSubVidchuttiaActivity"/>
+        <activity android:name=".ui.activity.AreasListActivity"/>
+        <activity android:name=".ui.activity.AreaActivity"/>
+        <activity android:name=".ui.activity.AreaDetailActivity"/>
 
         <provider
             android:name=".model.MedOrgContentProvider"
